adicionar estrutura da pagina de avaliação

--- a/avaliacao.html
+++ b/avaliacao.html
@@ -1,1 +1,45 @@
 <!-- MAYARA -  avaliação de empresas -->
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/stylesAvaliacao.css">
+    <title>Avaliar empresa</title>
+</head>
+
+<body>
+    <header>
+   
+    </header>
+
+    <h1>Avalie uma Empresa!</h1>
+    <p>Deixe aqui um comentário e uma avaliação do seu contato com uma empresa.</p>
+    <main>
+        <div class="avaliacaoDaEmpresa">
+            Nome completo: <input type="text">
+            Nome da Empresa: <input type="text">
+            Título do seu comentário: <input type="text">
+            Seu comentário: <textarea name="" id="" cols="30" rows="10"></textarea>
+            Avaliação: <select>
+                    <option>Péssima</option>
+                    <option>Ruím</option>
+                    <option>Normal</option>
+                    <option>Boa</option>
+                    <option>Ótima</option>
+                </select>
+            <div class="botao">
+                    <Button>Enviar</Button>
+            </div>
+        </div>
+        <img src="img/executivo-etnico-africano-com-adesivos-no-escritorio_79295-4908.jpg" alt="">
+    </main>
+
+    <footer>
+
+    </footer>
+</body>
+
+</html>
