--- a/sobre.html
+++ b/sobre.html
@@ -1,1 +1,23 @@
 <!-- TAINARA - Sobre nós -->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Sobre nos</title>
+    <link rel="stylesheet" href="./css/stylesSobre.css">
+</head>
+<body>
+    <header>
+        <h1>Sobre nos</h1>
+        <p>A "Mulherada", é uma plataforma web que foi desenvolvida pensando em nos mulheres, com o intuito de ajudar a se recolocarem no mercado quando são desligadas de outras empresas ou após a gravidez, pois é muito comum que elas encontrem dificuldades de recolocação depois desse período. Essa plataforma foi criada em 2019 por mulheres logo apos passarem por um curso de programacao voltado para web site. E elas mostraram que a Mulherada pode fazer qualquer coisa, basta ter vontade e persistencia.
+        </p> 
+    </header>
+    <img src="./img/9731.jpg" alt="">
+
+    <footer>
+
+    </footer>
+</body>
+</html>
