--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
                 </p>
                 <p>
-                    AS EMPRESAS MELHORES QUALIFICADAS <p>E AVALIADAS DO MERCADO</p>
+                    AS MELHORES EMPRESAS QUALIFICADAS <p>E AVALIADAS DO MERCADO</p>
                 </p>    
            </section>
 
