--- a/usuario.html
+++ b/usuario.html
@@ -4,52 +4,56 @@
 <html lang="pt-br">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/cadastros.css">
 
     <title>Cadastro</title>
+
 </head>
 
 <body>
 
-    <header class="logo-usuario">
-        <div class="header-1">
-            <div class="container">
-                <img src="./img/logo.jpeg" />
-            </div>
-        </div>
-    </header>
+    <div class="">
 
-    <h1>USUÁRIO</h1>
-    <p> Cadastre-se em nosso site para acessar as vagas!</p>
+        <form name="formUsuario" action="" method="POST">
 
-    <input type="button" name="cadastro-facebook" value="Cadastrar com o Facebook">
-    <input type="button" name="cadastro-facebook" value="Cadastrar com o LinkedIn">
+            <h1>Cadastrar usuário</h1>
 
-    <!-- <form>
-        Nome
-    </form> -->
-    <!-- 
-    <form action="Script_do_Formulario.php" method="post">
-        Nome       
-    
-    </form> -->
+            <p class="nome">
+                <input type="text" name="nome" placeholder="Primeiro Nome" required="required">
+            </p>
 
-    <form action="/action_page" method="get">
-        Primeiro nome: <input type="text" name=""><br>
-        Sobrenome: <input type="text" name=""><br>
-        E-mail: <input type="text" name=""><br>
-        Defina uma senha: <input type="text" name=""><br>
-        Confirme sua senha: <input type="text" name=""><br>
-        <input type="submit" value="Enviar">
+            <p class="sobrenome">
+                <input type="text" name="sobrenome" placeholder="Sobrenome" required="required">
+            </p>
+
+            <p class="email">
+                <input type="email" name="email" placeholder="Informe seu E-mail" required="required">
+            </p>
+
+            <p class="senha">
+                <input type="password" name="senha" placeholder="Digite uma Senha" required="required">
+            </p>
+
+            <p class="senha">
+                <input type="password" name="senha" placeholder="Confirme sua Senha" required="required">
+            </p>
+
+
+            <p class="enviar">
+                <input type="submit" name="enviar" value="Enviar">
+            </p>
+
+            <p class="entrar">
+                <input type="submit" name="entrar" value="Entrar">
+            </p>
+
+    </div>
 
     </form>
-
-    Já sou cadastrado! <input type="submit" value="Entrar">
-
-
 
 </body>
 
