--- a/faleconosco.html
+++ b/faleconosco.html
@@ -1,1 +1,31 @@
 <!-- ALINE -->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="contato.css">
+    <title>Mulherada</title>
+</head>
+<body>
+    <h1>
+        Fale Conosco
+    </h1>
+    
+        <div class="contato">
+        <p>Contato:</p>
+        <p>Telefone: (11) 1234-5434</p>
+        <p>Digite seu e-mail:</p>
+        <input type="email"> 
+        <p>Digite seu telefone:</p>
+        <input type="telefone"> </div>
+
+        <div class="duvidas">
+        <p>Deixe sua dúvida:</p>
+        <textarea> </textarea> <button>Enviar</button> 
+        </div>
+
+    
+</body>
+</html>
