--- a/depoimentos.html
+++ b/depoimentos.html
@@ -8,7 +8,7 @@
         <title>MULHERADA</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
         <link rel="stylesheet" href="./css/main.css">
-        <link rel="stylesheet" href="depoimento.css">
+        <link rel="stylesheet" href="css/depoimento.css">
     </head>
     
     <body>
