--- a/sobre.html
+++ b/sobre.html
@@ -1,6 +1,6 @@
 <!-- TAINARA - Sobre nós -->
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"></html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
         <title>MULHERADA</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
         <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/stylesSobre.css">
     </head>
     
     <body>
@@ -34,11 +35,12 @@
             </div>
         </header>
                 </main>
-        <h1>Sobre nos</h1>
+        <h1>Sobre nós</h1>
         <p>A "Mulherada", é uma plataforma web que foi desenvolvida pensando em nos mulheres, com o intuito de ajudar a se recolocarem no mercado quando são desligadas de outras empresas ou após a gravidez, pois é muito comum que elas encontrem dificuldades de recolocação depois desse período. Essa plataforma foi criada em 2019 por mulheres logo apos passarem por um curso de programacao voltado para web site. E elas mostraram que a Mulherada pode fazer qualquer coisa, basta ter vontade e persistencia.
         </p> 
     </main>
-    <img src="./img/9731.jpg" alt="">
+
+    <img class = "imagem" src="./img/9731.jpg" alt="">
 
     <footer>
 
