--- a/curriculo.html
+++ b/curriculo.html
@@ -21,14 +21,11 @@
                 <img src="./img/icone1.png    " />
                 <span>MULHERADA</span>
             </div>
-            <nav>
+        <nav>
                 <a href="index.html">Home</a>
-                <a href="sobre.html">Sobre nós</a>
-                <a href="vagas.html">Vagas</a>
-                <a href="usuario.html">Cadastre-se</a>
-                <a href="usuario.html">Login</a>
-                <a href="curriculo.html">Currículo</a>
-                <a href="faleconosco.html">fale Conosco</a>
+                <a href="sobrenos.html">Sobre nós</a>
+                <a href="cadastro-usuario.html">Cadastre-se</a>
+                <a href="login.html">Login</a>
 
 
             </nav>
@@ -149,7 +146,21 @@
 
 
         </form>
-
+        <footer class="centralizado">
+                <div class="container">
+                    <div class="img-footer">
+                        <img src="./img/facebook (1).svg" alt="facebook" srcset="">
+                        <img src="./img/instagram (1).svg" alt="instagran" srcset="">
+                        <img src="./img/twitter.svg" alt="twitter" srcset="">
+                        <img src="./img/whatsapp.svg" alt="whatsapp" srcset="">
+                    </div>
+                    <ul>
+                        <li><a class="email-index" href="mailto:priscilauchoaa@gmail.com" target="_top">CONTATO</a></li>
+                        <li>SOBRE</li>
+                        <li>Copyright ©</li>
+                    </ul>
+                </div>
+            </footer>
     </body>
 
     </html>
