--- a/faleconosco.html
+++ b/faleconosco.html
@@ -15,7 +15,7 @@
     <body>
         <!--Esse container-body deixa todo a página centralizada com margem igual -->
         <!-- <div class="container-body"></div> -->
-       <!-- HEADER FIXO -->
+        <!-- HEADER FIXO -->
         <header>
             <div class="container">
                 <div>
@@ -24,7 +24,7 @@
                 </div>
                 <nav>
                     <a href="index.html">Home</a>
-                    <a href="sobre.html">Sobre nós</a>
+                    <a href="sobrenos.html">Sobre nós</a>
                     <a href="vagas.html">Vagas</a>
                     <a href="usuario.html">Cadastre-se</a>
                     <a href="usuario.html">Login</a>
