--- a/vagas.html
+++ b/vagas.html
@@ -23,7 +23,7 @@
                 </div>
                 <nav>
                     <a href="index.html">Home</a>
-                    <a href="sobre.html">Sobre nós</a>
+                    <a href="sobrenos.html">Sobre nós</a>
                     <a href="vagas.html">Vagas</a>
                     <a href="usuario.html">Cadastre-se</a>
                     <a href="usuario.html">Login</a>
@@ -34,3 +34,23 @@
                 </nav>
             </div>
         </header>
+        <main>
+            
+        </main>
+        <footer class="centralizado">
+                <div class="container">
+                    <div class="img-footer">
+                        <img src="./img/facebook (1).svg" alt="facebook" srcset="">
+                        <img src="./img/instagram (1).svg" alt="instagran" srcset="">
+                        <img src="./img/twitter.svg" alt="twitter" srcset="">
+                        <img src="./img/whatsapp.svg" alt="whatsapp" srcset="">
+                    </div>
+                    <ul>
+                        <li><a class="email-index" href="mailto:priscilauchoaa@gmail.com" target="_top">CONTATO</a></li>
+                        <li>SOBRE</li>
+                        <li>Copyright ©</li>
+                    </ul>
+                </div>
+            </footer>
+</body>
+</html>
