padronizando a página "sobre"

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -7,16 +7,17 @@
         <title>MULHERADA</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
         <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/sobrenos.css">
     </head>
     
     <body>
         <!--Esse container-body deixa todo a página centralizada com margem igual -->
         <!-- <div class="container-body"></div> -->
-       <!-- HEADER FIXO -->
+        <!-- HEADER FIXO -->
         <header>
             <div class="container">
                 <div>
-                    <img src="./img/ww_white.png    " />
+                    <img src="./img/ww_white.png" />
                     <span class="mulherada-logo">MULHERADA</span>
                 </div>
                 <nav>
@@ -27,14 +28,15 @@
                 </nav>
             </div>
         </header>
-        <main class="main-sobre">
 
-            <section class="sobre centralizado">
-
-                <div class="container sobre-container">
-                    <div class="sobre-nos">
-                        <h1>Sobre nós</h1>
-                        <p class="sobre-p">"Mulherada" é uma plataforma web que foi desenvolvida pensando em nos mulheres, com o intuito de ajudar a se recolocarem no mercado quando são desligadas de outras empresas ou após a gravidez, pois é muito comum que elas encontrem dificuldades de recolocação depois desse período. Essa plataforma foi criada em 2019 por mulheres logo apos passarem por um curso de programacao voltado para web site. E elas mostraram que a Mulherada pode fazer qualquer coisa, basta ter vontade e persistencia.
+        <!-- MAIN -->
+        <main>  
+            <section class="main-sobre centralizado">
+                <div class="sobre container borda-padrao">
+                    <div class="detalhes">
+                        <span class="titulo">Sobre nós</span>
+                        <article class="descricao">
+                            "Mulherada" é uma plataforma web que foi desenvolvida pensando em nós mulheres, com o intuito de ajudar a se recolocarem no mercado quando são desligadas de outras empresas ou após a gravidez, pois é muito comum que elas encontrem dificuldades de recolocação depois desse período. Essa plataforma foi criada em 2019 por mulheres logo após participarem de um curso de programação web. E elas mostraram que a Mulherada pode fazer qualquer coisa, basta ter vontade e persistência.
                         </p> 
                     </div>
                     <img src="./img/sobrenos.jpeg" alt="" srcset=""/>
