--- a/lista-vagas.html
+++ b/lista-vagas.html
@@ -25,7 +25,7 @@
                     <a href="index.html">Home</a>
                     <a href="sobrenos.html">Sobre nós</a>
                     <a href="cadastro-usuario.html">Cadastre-se</a>
-                    <a href="login.html">Login</a>
+                    <a href="login.html"><div>Olá </div> Priscila</a>
                 </nav>
             </div>
         </header>
@@ -59,47 +59,47 @@
                     <div class="divisor-horizontal"></div>
 
                     <section class="item vaga">
-                        <span class="cidade">São Paulo, SP</span>
-                        <a href="javascript:alert('vaga')" class="nome">Fullstack developer</a>
+                        <span class="cidade">Brooklin, São Paulo</span>
+                        <a href="descricao-vaga.html" class="nome">Fullstack developer - Pleno</a>
                         <span class="compania">Creditas</span>
                         <span class="salario">R$ 6500,00</span>
-                        <article class="descricao">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
+                        <article class="descricao">                                
+                            Você tem facilidade em inspirar equipes para sempre conseguir os melhores resultados? Gosta de liderar pessoas e resolver problemas? Ser Tech Team Leader na Creditas é saber orientar, liderar e motivar sua equipe, focando sempre na evolução individual de cada Tripulante e, com isso, obter melhores resultados.
                         </article>
-                        <a href="mailto:teste@gmail.com" class="aplicar">Aplique agora!</a>
+                        <a href="mailto:teste@gmail.com" class="aplicar">Entrar em contato</a>
                     </section>
 
                     <section class="item vaga">
-                        <span class="cidade">São Paulo, SP</span>
-                        <a href="javascript:alert('vaga')" class="nome">Front-end developer</a>
+                        <span class="cidade">Jardins, São Paulo</span>
+                        <a href="javascript:alert('vaga')" class="nome">Front-end developer - Jr</a>
                         <span class="compania">Nubank</span>
                         <span class="salario">R$ 3500,00</span>
                         <article class="descricao">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
                         </article>
-                        <a href="mailto:teste@gmail.com" class="aplicar">Aplique agora!</a>
+                        <a href="mailto:teste@gmail.com" class="aplicar">Entrar em contato</a>
                     </section>
 
                     <section class="item vaga">
-                        <span class="cidade">Campinas, SP</span>
+                        <span class="cidade">Itaim Bibi, São Paulo</span>
                         <a href="javascript:alert('vaga')" class="nome">Back-end developer</a>
                         <span class="compania">Yellow</span>
                         <span class="salario">R$ 3500,00</span>
                         <article class="descricao">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
                         </article>
-                        <a href="mailto:teste@gmail.com" class="aplicar">Aplique agora!</a>
+                        <a href="mailto:teste@gmail.com" class="aplicar">Entrar em contato</a>
                     </section>
 
                     <section class="item vaga">
-                        <span class="cidade">New York, SP</span>
-                        <a href="javascript:alert('vaga')" class="nome">UI/UX Designer</a>
+                        <span class="cidade">Pinheiros, São Paulo</span>
+                        <a href="javascript:alert('vaga')" class="nome">Analyst Developer</a>
                         <span class="compania">WeWork</span>
                         <span class="salario">R$ 6000,00</span>
                         <article class="descricao">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
                         </article>
-                        <a href="mailto:teste@gmail.com" class="aplicar">Aplique agora!</a>
+                        <a href="mailto:teste@gmail.com" class="aplicar">Entrar em contato</a>
                     </section>
                 </div>
 
