--- a/login.html
+++ b/login.html
@@ -36,14 +36,13 @@
 
             <div class="centralizado">
 
-
                 <form class="form-usuario borda-padrao" name="formUsuario" action="" method="POST">
 
                     <span class="user">Login</span>
 
                     <input type="email" name="email" required="required" placeholder="Informe seu E-mail">
                     <input type="password" name="senha" required="required" placeholder="Digite uma Senha">
-                    <input type="submit" name="enviar" value="Entrar">
+                    <a href="index-logado.html" class="button" type="submit">Entrar</a>
 
                     <div class="divisor-horizontal"></div>
 
